--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,7 @@
-# OSX
-#
-.DS_Store
-
-# Xcode
-#
-build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-project.xcworkspace
-iOS/AppDelegate.m
-iOS/main.jsbundle
-
-# node.js
-#
-node_modules/
-npm-debug.log
-
-# secret keys
-#
-secrets.js
+node_modules
+dist
+test/temp
+.sass-cache
+app/vendor
+.tmp
+test/scripts/
