--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Colin Parsons, Danielle Knudson, Josh Turner, Tamara Woodson",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.13.2",
+    "express": "^4.13.1",
+    "fb": "^0.7.0",
     "jquery": "~2.1.3",
     "react": "~0.13.1",
     "react-facebook-login": "^1.0.5",
