--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.13.2",
+    "bookshelf": "^0.8.1",
     "express": "^4.13.1",
     "fb": "^0.7.0",
+    "gulp-db": "0.0.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-shell": "^0.4.2",
+    "gulp-util": "^3.0.6",
     "jquery": "~2.1.3",
-    "react": "~0.13.1",
-    "react-router": "~0.13.2",
-    "reflux": "~0.2.7"
+    "knex": "^0.8.6",
+    "mysql": "^2.8.0",
+    "nodemon": "^1.3.8",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
+    "reflux": "~0.2.7",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.3.0"
   },
   "devDependencies": {
     "browserify": "~9.0.7",
