--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "body-parser": "^1.13.2",
     "bookshelf": "^0.8.1",
+    "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
+    "express-session": "^1.11.3",
     "fb": "^0.7.0",
     "gulp-db": "0.0.1",
     "gulp-notify": "^2.2.0",
