--- a/package.json
+++ b/package.json
@@ -26,20 +26,23 @@
   },
   "devDependencies": {
     "browserify": "~9.0.7",
+    "chai": "^3.2.0",
     "gulp": "~3.8.11",
     "gulp-minify-css": "~1.0.0",
     "gulp-rev-all": "~0.8.16",
     "gulp-uglify": "~1.1.0",
     "gulp-util": "~3.0.4",
+    "mocha": "^2.2.5",
     "reactify": "~1.1.0",
+    "supertest": "^1.0.1",
     "vinyl-source-stream": "~1.1.0"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
+    "build": "./node_modules/gulp/bin/gulp.js build",
     "postinstall": "bower install",
-    "start": "./node_modules/gulp/bin/gulp.js serve",
-    "build": "./node_modules/gulp/bin/gulp.js build"
+    "start": "./node_modules/gulp/bin/gulp.js serve"
   }
 }
