--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "watchify": "^3.3.0"
   },
   "devDependencies": {
+    "babelify": "^6.1.3",
     "browserify": "~9.0.7",
     "gulp": "~3.8.11",
     "gulp-minify-css": "~1.0.0",
@@ -38,8 +39,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "build": "./node_modules/gulp/bin/gulp.js build",
     "postinstall": "bower install",
-    "start": "./node_modules/gulp/bin/gulp.js serve",
-    "build": "./node_modules/gulp/bin/gulp.js build"
+    "start": "./node_modules/gulp/bin/gulp.js serve"
   }
 }
