--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp-db": "0.0.1",
     "gulp-notify": "^2.2.0",
     "gulp-shell": "^0.4.2",
-    "jquery": "~2.1.3",
+    "jquery": "^2.1.4",
     "knex": "^0.8.6",
     "mysql": "^2.8.0",
     "nodemon": "^1.3.8",
