--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "body-parser": "^1.13.2",
     "bookshelf": "^0.8.1",
+    "chai-things": "^0.2.0",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
