--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^0.13.3",
     "reflux": "~0.2.7",
     "tcomb-form": "^0.6.3",
+    "underscore": "^1.8.3",
     "watchify": "^3.3.0"
   },
   "devDependencies": {
