--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "reflux": "~0.2.7",
     "tcomb-form": "^0.6.3",
     "underscore": "^1.8.3",
-    "watchify": "^3.3.0"
-  },
-  "devDependencies": {
+    "watchify": "^3.3.0",
     "babelify": "^6.1.3",
     "browserify": "~9.0.7",
     "chai": "^3.2.0",
